# LeGitCLI

./: .gitignore  AUTHORS.txt  LICENSE.txt  README.md  legit.py  main.py  pyproject.toml  requirements.txt
abstract/: guards.py
command/: __init__.py
flows/: README.md  __init__.py  help.py  setup.py  validate.py
git/: README.md  client.py
model/: README.md  annotations.py  bindings.py  command_configs.py  config.py  exceptions.py  rules.py  ruleset.py  scope_conditions.py  scopes.py  validator_results.py  verifier_results.py
parsing/: __init__.py
parsing/converters/: base_converter.py  config_converter.py  legit_rules_converter.py  rule_converter.py  scope_condition_converter.py  scoped_ruleset_converter.py
parsing/converters/dynamic/: __init__.py
resources/message/: big_message.txt  short_message.txt
resources/rulefiles/: README.md
resources/rulefiles/samples/: simple.yml
scripts/: README.md  __init__.py  create-dummy-git-project.py  create_dummy_git_project.py  setup.py  setup_or_update.py
scripts/scriptutils/: __init__.py
src/legitcli/: main.py
src/legitcli/flows/: __init__.py  help.py  init.py  validate.py  version.py
src/legitcli/git/: client.py
src/legitcli/model/: annotations.py  config.py  (+8 more)
tests/: README.md
tests/rules/: test_commit_message_validator.py
tests/testutils/: fakes.py
tests/typeutils/: test_guards.py
typeutils/: guards.py
utils/: __init__.py
validator/: __init__.py  commit.py  generic.py  ruleset.py
validator/rules/: __init__.py
validator/scopes/: __init__.py
verifiers/: README.md  commit.py  ruleset.py
(+19 files in other folders)
