[tool.poetry]
name = "legitcli"
version = "0.1.2"
description = ""
authors = [
    "carlosmspk <carlosmspk@gmail.com>",
    "dandepaiva <daniel.paiva@exaud.com>",
    "naexaud <nuno.aguiar@exaud.com>",
    "Rhaelzo",
    "andreomlopes <andreomlopes@gmail.com>",
]
packages = [{include = "legitcli", from = "src"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
legit = "legitcli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
